syntax = "proto3";

package auth;
// import "google/protobuf/any.proto";
//  import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
option go_package = "./pkg/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc GetAll(google.protobuf.Empty) returns (GetAllResponse) {}
}


// Register

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

// Validate

message ValidateRequest { string token = 1; }


message ValidateResponse {
  int64 status = 1;
  string error = 2;
  string userId = 3;
}



message User {
    string id = 1;
    string username = 2;
}
// Get All
message GetAllResponse{
    int64 status = 1;
    string error = 2;
    // repeated google.protobuf.Any data = 3;
    repeated User data = 3;
}